--- a/Task06/cold-hot-web/index.html
+++ b/Task06/cold-hot-web/index.html
@@ -36,10 +36,10 @@
         <button id="view-history-from-result">View History</button>
     </div>
 
-    <script src="src/format_data.js"></script>
-    <script src="src/game.js"></script>
-    <script src="src/db.js"></script>
-    <script src="src/ui.js"></script>
-    <script src="src/index.js"></script>
+    <script src="js/format_data.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/db.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
